src/test/deca/context/valid/eq_neq_expr_type_not_compatibles.deca
// Test context, on ne peut pas utiliser l'opérateur '==' sur des variables de types différents,
// sauf pour int et float


{
    int x = 5;
    float y = 7.5;
    if (x == y) { 
        println("x est égal à y");
    }
}