src/test/deca/context/invalid/rvalue_assign_class_to_int_in_class.deca
// Test la règle 3.28: on ne peut pas affecter à un objet de type int 
// une valeur d'un objet de type classe. 

class A  {
    
}

class B {
    A a = new A();
    int x = a;
}



// Resultat:
//TODOTEST
